--- a/physics-engine.vcxproj
+++ b/physics-engine.vcxproj
@@ -117,7 +117,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>glfw3dll.lib;vulkan-1.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glad.lib;glfw3dll.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
       <AdditionalLibraryDirectories>$(ProjectDir)vcpkg_installed\x64-windows\lib</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
@@ -137,7 +137,7 @@
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalLibraryDirectories>$(ProjectDir)vcpkg_installed\x64-windows\lib</AdditionalLibraryDirectories>
-      <AdditionalDependencies>glfw3dll.lib;vulkan-1.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>glad.lib;glfw3dll.lib;$(CoreLibraryDependencies);%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
@@ -146,7 +146,7 @@
     <ClCompile Include="ObjectInteractor.cpp" />
     <ClCompile Include="PhysicsEnvSingleton.cpp" />
     <ClCompile Include="RigidBody.cpp" />
-    <ClCompile Include="VulkanApplication.cpp" />
+    <ClCompile Include="OpenGLApplication.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Collider.hpp" />
@@ -154,11 +154,11 @@
     <ClInclude Include="physics.hpp" />
     <ClInclude Include="PhysicsEnvSingleton.hpp" />
     <ClInclude Include="RigidBody.hpp" />
-    <ClInclude Include="VulkanApplication.hpp" />
+    <ClInclude Include="OpenGLApplication.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\compile.bat" />
-    <None Include="shaders\shader.slang" />
+    <None Include="shaders\shader.frag" />
+    <None Include="shaders\shader.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
