--- a/physics-engine.vcxproj
+++ b/physics-engine.vcxproj
@@ -141,14 +141,20 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="EntityManager.cpp" />
-    <ClCompile Include="EntityManager.hpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="PhysicsSystem.cpp" />
     <ClCompile Include="PhysSimApplication.cpp" />
+    <ClCompile Include="MeshRegistry.cpp" />
+    <ClCompile Include="RenderingSystem.cpp" />
+    <ClCompile Include="RenderingSystem.hpp" />
+    <ClCompile Include="ShaderSystem.cpp" />
     <ClCompile Include="SparseSet.hpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="MeshRegistry.hpp" />
+    <ClInclude Include="PhysicsSystem.hpp" />
     <ClInclude Include="PhysSimApplication.hpp" />
+    <ClInclude Include="ShaderSystem.hpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="shaders\shader.frag" />
