--- a/physics-engine.vcxproj
+++ b/physics-engine.vcxproj
@@ -145,8 +145,8 @@
     <ClCompile Include="PhysicsSystem.cpp" />
     <ClCompile Include="PhysSimApplication.cpp" />
     <ClCompile Include="MeshRegistry.cpp" />
-    <ClCompile Include="RenderingSystem.cpp" />
-    <ClCompile Include="RenderingSystem.hpp" />
+    <ClCompile Include="LowLevelRenderer.cpp" />
+    <ClCompile Include="LowLevelRenderer.hpp" />
     <ClCompile Include="ShaderSystem.cpp" />
     <ClCompile Include="SparseSet.hpp" />
   </ItemGroup>
@@ -154,6 +154,7 @@
     <ClInclude Include="MeshRegistry.hpp" />
     <ClInclude Include="PhysicsSystem.hpp" />
     <ClInclude Include="PhysSimApplication.hpp" />
+    <ClInclude Include="ResourceManager.hpp" />
     <ClInclude Include="ShaderSystem.hpp" />
   </ItemGroup>
   <ItemGroup>
