--- a/physics-engine.vcxproj.filters
+++ b/physics-engine.vcxproj.filters
@@ -27,9 +27,6 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="PhysSimApplication.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="SparseSet.hpp">
       <Filter>Header Files</Filter>
     </ClCompile>
@@ -57,6 +54,9 @@
     <ClCompile Include="ShaderSystem.cpp">
       <Filter>Source Files\Service Implementations</Filter>
     </ClCompile>
+    <ClCompile Include="PhysSimApplication.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="PhysSimApplication.hpp">
@@ -83,13 +83,7 @@
     <ClInclude Include="IRenderer3D.hpp">
       <Filter>Header Files\Service Interfaces</Filter>
     </ClInclude>
-    <ClInclude Include="IRenderingEngine.hpp">
-      <Filter>Header Files\Service Interfaces</Filter>
-    </ClInclude>
     <ClInclude Include="PhysicsSystem.hpp">
-      <Filter>Header Files\Services</Filter>
-    </ClInclude>
-    <ClInclude Include="RenderingEngine.hpp">
       <Filter>Header Files\Services</Filter>
     </ClInclude>
     <ClInclude Include="ISceneManager.hpp">
@@ -100,6 +94,12 @@
     </ClInclude>
     <ClInclude Include="World.hpp">
       <Filter>Header Files\Services</Filter>
+    </ClInclude>
+    <ClInclude Include="IPhysicsSystem.hpp">
+      <Filter>Header Files\Service Interfaces</Filter>
+    </ClInclude>
+    <ClInclude Include="PointMass.hpp">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
