--- a/physics-engine.vcxproj
+++ b/physics-engine.vcxproj
@@ -149,6 +149,8 @@
     <ClCompile Include="Renderer3D.cpp" />
     <ClCompile Include="Renderer3D.hpp" />
     <ClCompile Include="ResourceManager.cpp" />
+    <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="SceneRenderingManager.cpp" />
     <ClCompile Include="ServiceLocator.hpp" />
     <ClCompile Include="SparseSet.hpp" />
     <ClCompile Include="stb.hpp" />
@@ -158,6 +160,7 @@
     <ClInclude Include="Camera.hpp" />
     <ClInclude Include="ID.hpp" />
     <ClInclude Include="IPhysicsSystem.hpp" />
+    <ClInclude Include="ISceneRenderingManager.hpp" />
     <ClInclude Include="ISceneManager.hpp" />
     <ClInclude Include="Material.hpp" />
     <ClInclude Include="Mesh.hpp" />
@@ -167,12 +170,14 @@
     <ClInclude Include="PhysSimApplication.hpp" />
     <ClInclude Include="IRenderer3D.hpp" />
     <ClInclude Include="PointMass.hpp" />
+    <ClInclude Include="SceneRenderingManager.hpp" />
     <ClInclude Include="ResourceManager.hpp" />
+    <ClInclude Include="SceneManager.hpp" />
     <ClInclude Include="utils.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="shaders\shader.frag" />
-    <None Include="shaders\shader.vert" />
+    <None Include="shaders\cubemap.frag" />
+    <None Include="shaders\cubemap.vert" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
